Configure GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "browserslist": ["defaults"]
+  "browserslist": [
+    "defaults"
+  ],
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
