--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "epos-till-app",
+  "name": "epos-till-full",
   "version": "1.0.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -9,12 +10,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "browserslist": [
-    "defaults"
-  ],
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
